--- a/hw/hw_4/pacman.css
+++ b/hw/hw_4/pacman.css
@@ -13,8 +13,6 @@ body{
 
 #pacman{
 	position: absolute;
-	width: 40px;
-	height: 40px;
 }
 
 .rotate90 {
@@ -42,4 +40,12 @@ body{
 	transform: scaleX(-1);
 	-ms-filter: fliph;
 	filter: fliph;
+}
+
+.wall {
+	position: absolute;
+	background-color: #666666;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
 }
